--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -14,9 +14,7 @@ INCLUDE("FindThirdPartyBoost")
 	
 # ---------------------------------
 # Target macros
-# Defines target operating system
-# Defines target architecture
-# Defines target compiler
+# Defines target operating system, architecture and compiler
 # ---------------------------------
 SET_BUILD_PLATFORM()
 
