--- a/openvibe/CMakeLists.txt
+++ b/openvibe/CMakeLists.txt
@@ -50,9 +50,7 @@ ENDIF(UNIX)
 
 # ---------------------------------
 # Target macros
-# Defines target operating system
-# Defines target architecture
-# Defines target compiler
+# Defines target operating system, architecture and compiler
 # ---------------------------------
 SET_BUILD_PLATFORM()
 
