--- a/unit-test/ov-base/CMakeLists.txt
+++ b/unit-test/ov-base/CMakeLists.txt
@@ -11,7 +11,7 @@ ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_FILES})
 SET_BUILD_PLATFORM()	# Default build Platform
 INCLUDE("FindOpenViBE")											# Find OpenViBE base includes and library
 INCLUDE("FindOpenViBECommon")									# Find OpenViBE Common includes and library
-SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${OVT_UNIT_TESTS_FOLDER})	# Place project in folder unit-test (for some IDE)
+SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${TESTS_FOLDER})	# Place project in folder unit-test (for some IDE)
 
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${GTEST_BOTH_LIBRARIES})	# Add google Test
 
