--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -55,9 +55,7 @@ ENDIF(UNIX)
 
 # ---------------------------------
 # Target macros
-# Defines target operating system
-# Defines target architecture
-# Defines target compiler
+# Defines target operating system, architecture and compiler
 # ---------------------------------
 SET_BUILD_PLATFORM()
 
