--- a/plugins/processing/tools/CMakeLists.txt
+++ b/plugins/processing/tools/CMakeLists.txt
@@ -11,6 +11,7 @@ ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRC_FILES})
 SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
 	VERSION ${PROJECT_VERSION}
 	SOVERSION ${PROJECT_VERSION_MAJOR}
+	FOLDER ${PLUGINS_FOLDER}
 	COMPILE_FLAGS "-DOVP_Exports -DOVP_Shared")
 
 INCLUDE("FindOpenViBE")
@@ -24,12 +25,9 @@ INCLUDE("FindOpenViBEModuleCommunication")
 
 # ---------------------------------
 # Target macros
-# Defines target operating system
-# Defines target architecture
-# Defines target compiler
+# Defines target operating system, architecture and compiler
 # ---------------------------------
 SET_BUILD_PLATFORM()
-
 
 # -----------------------------
 # Install files
