--- a/toolkit/CMakeLists.txt
+++ b/toolkit/CMakeLists.txt
@@ -62,9 +62,7 @@ INCLUDE("FindThirdPartyBoost_FileSystem")
 
 # ---------------------------------
 # Target macros
-# Defines target operating system
-# Defines target architecture
-# Defines target compiler
+# Defines target operating system, architecture and compiler
 # ---------------------------------
 SET_BUILD_PLATFORM()
 
