:truck: ov_directories.h + ov_directories_string.h --> directories.hpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -138,7 +138,7 @@ if(NOT CMAKE_BUILD_TYPE AND CMAKE_GENERATOR MATCHES "Visual Studio*")
 	install(FILES ${CMAKE_BINARY_DIR}/.install DESTINATION ${DIST_ROOT})
 elseif(CMAKE_BUILD_TYPE AND OV_PACKAGE)
 	# Add directories that OpenViBE will use to look for its components runtime, unless overridden by environment variables in the launch scripts.
-	# These defines should only be used in "openvibe/ov_directories.h".
+	# These defines should only be used in "openvibe/directories.hpp".
 
 	# We use absolute paths to avoid issue for unit and validation tests
 	get_filename_component(DIST_ROOT_ABSOLUTE "." REALPATH BASE_DIR "${CMAKE_BINARY_DIR}")
@@ -179,7 +179,7 @@ elseif(CMAKE_BUILD_TYPE AND OV_PACKAGE)
 	include(CPack)
 elseif(CMAKE_BUILD_TYPE)
 	# Add directories that OpenViBE will use to look for its components runtime, unless overridden by environment variables in the launch scripts.
-	# These defines should only be used in "openvibe/ov_directories.h".
+	# These defines should only be used in "openvibe/directories.hpp".
 	add_definitions(-DOV_CMAKE_PATH_ROOT="${CMAKE_INSTALL_PREFIX}")
 	add_definitions(-DOV_CMAKE_PATH_BIN="${CMAKE_INSTALL_PREFIX}/bin")
 	add_definitions(-DOV_CMAKE_PATH_LIB="${CMAKE_INSTALL_PREFIX}/lib")
