--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -13,6 +13,7 @@ ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRC_FILES})
 SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
 	VERSION ${PROJECT_VERSION}
 	SOVERSION ${PROJECT_VERSION_MAJOR}
+	FOLDER ${KERNEL_FOLDER}
 	COMPILE_FLAGS "-DOVK_Exports -DOVK_Shared")
 
 INCLUDE("FindOpenViBE")
@@ -55,9 +56,7 @@ ENDIF(UNIX)
 
 # ---------------------------------
 # Target macros
-# Defines target operating system
-# Defines target architecture
-# Defines target compiler
+# Defines target operating system, architecture and compiler
 # ---------------------------------
 SET_BUILD_PLATFORM()
 
