--- a/openvibe/CMakeLists.txt
+++ b/openvibe/CMakeLists.txt
@@ -14,6 +14,7 @@ ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRC_FILES})
 SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
 	VERSION ${PROJECT_VERSION}
 	SOVERSION ${PROJECT_VERSION_MAJOR}
+	FOLDER ${KERNEL_FOLDER}
 	COMPILE_FLAGS "-DOV_Exports -DOV_Shared")
 
 INCLUDE("FindOpenViBECommon")
@@ -50,9 +51,7 @@ ENDIF(UNIX)
 
 # ---------------------------------
 # Target macros
-# Defines target operating system
-# Defines target architecture
-# Defines target compiler
+# Defines target operating system, architecture and compiler
 # ---------------------------------
 SET_BUILD_PLATFORM()
 
