--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,9 +47,17 @@ ELSE()
 	SET(COMPANY_NAME "Inria")
 ENDIF()
 
+# Options and cahce variables
 OPTION(Flag_VerboseOutput "Verbose CMake output" OFF)
-OPTION(OV_DISPLAY_ERROR_LOCATION ON)
+OPTION(OV_DISPLAY_ERROR_LOCATION "display complete error locations" ON)
 OPTION(PUBLISH_DOC_ASSETS "Publish plugin documentation assets" ON)
+OPTION(BUILD_VALIDATION_TEST "Build the validation tests" ON)
+OPTION(BUILD_UNIT_TEST "Build the unit tests" ON)
+OPTION(OV_PACKAGE "Create a package in build directory" OFF)
+SET(CMAKE_BUILD_TYPE "Release") # CACHE STRING "Build type: Debug / Release / RelWithDebInfo")
+SET(CMAKE_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}/sdk-${CMAKE_BUILD_TYPE}")
+
+MESSAGE(STATUS "CMAKE_BUILD_TYPE = ${CMAKE_BUILD_TYPE}")
 
 if(NOT(${Flag_VerboseOutput}))
 	set(CMAKE_INSTALL_MESSAGE LAZY)
@@ -68,10 +76,6 @@ ADD_DEFINITIONS("-DOV_PROJECT_NAME=\"${PROJECT_NAME}\"")
 ADD_DEFINITIONS("-DOV_VERSION_MAJOR=\"${OV_GLOBAL_VERSION_MAJOR}\"")
 ADD_DEFINITIONS("-DOV_VERSION_MINOR=\"${OV_GLOBAL_VERSION_MINOR}\"")
 ADD_DEFINITIONS("-DOV_VERSION_PATCH=\"${OV_GLOBAL_VERSION_PATCH}\"")
-
-IF(NOT DEFINED OV_PACKAGE)
-	SET(OV_PACKAGE FALSE)
-ENDIF(NOT DEFINED OV_PACKAGE)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -100,10 +104,6 @@ ELSEIF(UNIX)
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall ${OV_EIGEN_FLAGS}")
 ELSE()
 	MESSAGE(WARNING "Warning: unknown platform")
-ENDIF()
-
-IF(NOT CMAKE_INSTALL_PREFIX)
-	SET(CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}/../openvibe-sdk-build/dist-${CMAKE_BUILD_TYPE}")
 ENDIF()
 
 # Setup knowledge of GNU-style install path variables
